# bosp-blkio-controller

./: CMakeLists.txt  Kconfig  README  README.md
.cmake/: BuildDoxygenDocumentation.cmake  FindBbqRTLib.cmake  FindBoost.cmake  FindCGroup.cmake  FindLog4CPP.cmake  FindNVML.cmake  FindOpenCL.cmake  FindOpenCV.cmake  FindProtobuf.cmake
bbque/: CMakeLists.txt  Kconfig  application_manager.cc  application_proxy.cc  binding_manager.cc  command_manager.cc  configuration_manager.cc  data_manager.cc  energy_monitor.cc  platform_manager.cc  platform_proxy.cc  power_monitor.cc  process_manager.cc  profile_manager.cc  reliability_manager.cc  resource_accounter.cc  resource_manager.cc  rpc_messages.cc  scheduler_manager.cc  signals_manager.cc  synchronization_manager.cc
bbque/app/: application.cc  process.cc  recipe.cc  schedulable.cc  working_mode.cc
bbque/em/: CMakeLists.txt
bbque/pm/: CMakeLists.txt  Kconfig  power_manager.cc  power_manager_cpu.cc  power_manager_nvidia.cc  power_manager_recipe.cc
bbque/pp/: CMakeLists.txt  android_platform_proxy.cc  linux_platform_proxy.cc  local_platform_proxy.cc  mango_platform_proxy.cc  nvidia_platform_proxy.cc  nvml_platform_proxy.cc  opencl_platform_proxy.cc  proc_listener.cc  recipe_platform_proxy.cc  remote_platform_proxy.cc  test_platform_proxy.cc
bbque/res/: binder.cc  resource_assignment.cc  resource_path.cc  resource_tree.cc  resource_type.cc  resources.cc
bbque/utils/: CMakeLists.txt  deferrable.cc  extra_data_container.cc  metrics_collector.cc  worker.cc
bbque/utils/logging/: CMakeLists.txt  logger.cc
config/: bbque-layapp.sh.in  bbque.conf.in  bbqued.defaults.in  bbqued.in  bosp_init.env.in
config/pil/: generator_xml.in
config/pil/exynos_5422/: exynos_5422.xml
config/pil/hikey_960/: hikey_960.xml  systems.xml
config/pil/tpd/: tpd.xml
config/templates/: build.sh  decompressor.sh  settings.xml
config/templates/cpp/: CMakeLists.txt  Kconfig  bosp.mk
config/templates/python/: CMakeLists.txt  Kconfig  MyApp.py
include/bbque/: application_manager.h  application_manager_status.h  application_proxy.h  command_manager.h  config.h.in  energy_monitor.h  platform_manager.h  platform_proxy.h  power_monitor.h  process_manager.h  reliability_manager.h  resource_accounter.h  resource_accounter_conf.h  resource_accounter_status.h  resource_manager.h  rpc_proxy.h  rtlib.h  signals_manager.h  synchronization_manager.h  system.h
include/bbque/app/: application.h  application_conf.h  application_status.h  process.h  recipe.h  schedulable.h  working_mode.h  working_mode_status.h
include/bbque/em/: event.h
include/bbque/plugins/: scheduler_policy.h  synchronization_policy.h
include/bbque/pm/: power_manager.h  power_manager_cpu.h  power_manager_nvidia.h  power_manager_recipe.h
include/pmsl/: app_controller.h
include/tg/: hw.h  mem_buffer.h  requirements.h  task.h
libpms/: app_controller.cc  exec_synchronizer.cc
libpms/config/: libpms.conf.in
libpms/recipes/: generic.recipe  generic_manga.recipe  old_example.recipe  test_manga.recipe
libtg/: CMakeLists.txt  task_graph.cc
mpi/: CMakeLists.txt  config.cc
plugins/agent_proxy/grpc/proto/: CMakeLists.txt
plugins/rloader/: Kconfig
plugins/rloader/rxml/: CMakeLists.txt  rxml_rloader.cc
plugins/schedpol/: CMakeLists.txt  Kconfig
plugins/schedpol/adaptive_cpu/: CMakeLists.txt  Kconfig  adaptiveCPU_plugin.cc  adaptiveCPU_plugin.h  adaptiveCPU_schedpol.cc  adaptiveCPU_schedpol.h
plugins/schedpol/cloves/: Kconfig  cloves_schedpol.cc  cloves_schedpol.h
plugins/schedpol/contrex/: Kconfig  contrex_schedpol.cc  contrex_schedpol.h
plugins/schedpol/dynamicrandom/: CMakeLists.txt  Kconfig  dynamicrandom_plugin.cc  dynamicrandom_plugin.h  dynamicrandom_schedpol.cc  dynamicrandom_schedpol.h
plugins/schedpol/manga/: Kconfig  manga_schedpol.cc  manga_schedpol.h
plugins/schedpol/mangav2/: Kconfig  mangav2_schedpol.cc  mangav2_schedpol.h
plugins/schedpol/perdetemp/: Kconfig  perdetemp_schedpol.cc  perdetemp_schedpol.h
plugins/schedpol/random/: Kconfig  random_schedpol.cc  random_schedpol.h
plugins/schedpol/tempbalance/: CMakeLists.txt  Kconfig  tempbalance_plugin.cc  tempbalance_schedpol.cc  tempbalance_schedpol.h
plugins/schedpol/tempura/: Kconfig  tempura_schedpol.cc  tempura_schedpol.h
plugins/schedpol/test/: Kconfig  test_schedpol.cc  test_schedpol.h
plugins/schedpol/throttle/: CMakeLists.txt  Kconfig  throttle_plugin.cc  throttle_plugin.h  throttle_schedpol.cc  throttle_schedpol.h
plugins/schedpol/yamca/: yamca_schedpol.cc
plugins/schedpol/yams/: yams_schedpol.cc
rtlib/: CMakeLists.txt  Kconfig  bbque_exc.cc  bbque_ocl.cc  bbque_rpc.cc  bbque_rtlib.cc  rpc_fifo_client.cc  rpc_pb_fifo_client.cc
rtlib/bindings/: CMakeLists.txt  Kconfig
rtlib/bindings/android/: CMakeLists.txt  build.gradle
rtlib/bindings/android/bbque_service/: .gitignore  CMakeLists.txt  build.gradle  gradle_setup.sh  local.properties  local.properties.in
rtlib/bindings/android/bbque_service/gradle/wrapper/: gradle-wrapper.properties
rtlib/bindings/android/bbque_service/src/main/java/it/polimi/deib/bosp/androidservice/: BarbequeService.java
rtlib/bindings/android/bbque_service/src/main/res/values/: strings.xml
rtlib/bindings/android/src/androidTest/java/it/polimi/deib/bosp/androidservice/: ExampleInstrumentedTest.java
rtlib/bindings/android/src/main/: AndroidManifest.xml
rtlib/bindings/android/src/test/java/it/polimi/deib/bosp/androidservice/: ExampleUnitTest.java
rtlib/bindings/java/jni/: CMakeLists.txt  bbque_exc.cc
rtlib/bindings/python/: CMakeLists.txt  rtlib_bbqueexc.cc
rtlib/monitors/: throughput_monitor.cc  time_monitor.cc
scripts/: android_bbque_start.sh
scripts/android/: android_bbque_start.sh  android_bbque_stop.sh
tools/: CMakeLists.txt  bbqueDiscoverTSensors.sh  bbquePlatformLayoutParser.awk
tools/monitor/: bbqueCpuUsageDump.sh.in
tools/plpxml/: CMakeLists.txt  plp_translator.cc  plp_translator.hpp  plpxml.cc
tools/restore/: CMakeLists.txt  bosp.mk  dummy.recipe  main.cc  restore_exc.cc
tools/restore/include/: restore_exc.h
(+55 files in other folders)
