add_subdirectory(adaptive_cpu)
add_subdirectory(contrex)
add_subdirectory(cloves)
add_subdirectory(dynamicrandom)
add_subdirectory(manga)
add_subdirectory(mangav2)
add_subdirectory(perdetemp)
add_subdirectory(prfcfs)
add_subdirectory(random)
add_subdirectory(tempbalance)
add_subdirectory(tempura)
add_subdirectory(test)
add_subdirectory(throttle)
#add_subdirectory(yamca)
#add_subdirectory(yams)
